elasticsearch/k8s/coordinator.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  labels:
    component: elasticsearch
    role: coordinator
spec:
  selector:
    component: elasticsearch
    role: coordinator
  ports:
  - name: http
    port: 9200
    protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: elasticsearch-coordinator
  labels:
    component: elasticsearch
    role: coordinator
spec:
  replicas: 2
  template:
    metadata:
      labels:
        component: elasticsearch
        role: coordinator
    spec:
      containers:
      - name: elasticsearch-coordinator
        securityContext:
          privileged: false
          capabilities:
            add:
              - IPC_LOCK
              - SYS_RESOURCE
        image: quay.io/pires/docker-elasticsearch-kubernetes:6.3.2
        imagePullPolicy: Always
        ports:
        - containerPort: 9200
          name: http
          protocol: TCP
        - containerPort: 9300
          name: transport
          protocol: TCP
        volumeMounts:
        - name: storage
          mountPath: /data
      volumes:
          - emptyDir:
              medium: ""
            name: "storage"
