elasticsearch/k8s/kibana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana
  namespace: default 
spec:
  rules:
  - host: kibana.px
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana
          servicePort: 80
